--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
-assets/
-protected/runtime
+assets/*
+!assets/.gitignore
+protected/runtime/*
+!protected/runtime/.gitignore
+protected/data/*.db
 .DS_STORE
 .DS_Store
 .buildpath
