Adding selenium to travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ env:
   - DB=mysql
 
 before_script:
+  - pear channel-discover pear.phpunit.de
+  - pear install phpunit/PHPUnit_Selenium
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE tokilearning;'; fi"
   - echo "<?php
     return array(
