Fixing travis config.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ env:
 
 before_script:
   - pear channel-discover pear.phpunit.de
+  - pear channel-discover components.ez.no
+  - pear channel-discover pear.symfony-project.com
+  - pear install --alldeps phpunit/PHPUnit
   - pear install --alldeps phpunit/PHPUnit_Selenium
   - sh -c "if [ '$DB' = 'mysql' ]; then mysql -e 'CREATE DATABASE tokilearning;'; fi"
   - echo "<?php
